fix pb menu en version mobile

--- a/src/ts/index.css
+++ b/src/ts/index.css
@@ -301,4 +301,8 @@ flex-direction: column;
   form{
     margin: 10px;
   }
+
+  header nav {
+     margin-right: 0;
+  }
 }
